--- a/ServiceComplex/Pages/BaseData/Partial/_EditAccountClub.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_EditAccountClub.cshtml
@@ -125,37 +125,6 @@
                                                     </div>
 
                                                     <p><strong class="text-info">سایر اطلاعات </strong></p>
-                                                    <div class="form-row mb-8">
-                                                        <div class="form-group col-md-3">
-                                                            <label for=""> استان </label>
-                                                    <select asp-for="SateUid" asp-items="@(new SelectList(Model.States,"Value","Text"))" id="state" type="text" class="form-control">
-                                                                <option value="@null">--انتخاب کنید--</option>
-                                                            </select>
-                                                            <span asp-validation-for="CityUid" class="error"></span>
-                                                        </div>
-
-                                                        <div class="form-group col-md-3">
-                                                            <label for=""> شهر </label>
-                                                    <select asp-for="CityUid" id="cities" asp-items="@(new SelectList(Model.Cities,"Value","Text"))" type="text" class="form-control">
-                                                                <option value="@null">--انتخاب کنید--</option>
-                                                            </select>
-                                                            <span asp-validation-for="CityUid" class="error"></span>
-                                                        </div>
-
-
-                                                        <div class="form-group col-md-3">
-                                                            <label for="">آدرس 1</label>
-                                                            <input asp-for="AccClbAddress" type="text" class="form-control" placeholder="آدرس 1">
-                                                            <span asp-validation-for="AccClbAddress" class="error"></span>
-                                                        </div>
-                                                       @* <div class="form-group col-md-3">
-                                                            <label for="">آدرس 2</label>
-                                                            <input asp-for="AccClbAddress2" type="text" class="form-control" placeholder="آدرس 2">
-                                                            <span asp-validation-for="AccClbAddress2" class="error"></span>
-                                                        </div>*@
-
-                                                       
-                                                    </div>
 
                                                     @*<div class="form-row mb-8">
                                                         <div class="form-group col-md-3">
@@ -169,9 +138,64 @@
                                                             <input asp-for="AccClbConfirmPassword" type="password" class="form-control" placeholder="تکرار رمز عبور">
                                                             <span asp-validation-for="AccClbConfirmPassword" class="error"></span>
                                                         </div>
-                                                    </div>*@
+                                                    </div>*@ 
+                                                    <div class="form-row mb-8">
+                                                <div class="form-group col-md-3">
+                                                    <label for=""> قرارداد <span class="error">*</span></label>
+                                                    @*<select asp-for="AccFrContract" asp-items="@(new SelectList(Model.Jobs,"Value","Text"))" type="text" class="form-control">
+                                                        <option value="@null">--انتخاب کنید--</option>
+                                                    </select>
+                                                    <span asp-validation-for="AccFrContract" class="error"></span>*@
+                                                </div>
 
-                                                    <p><strong class="text-info">موقعیت جغرافیایی</strong></p>
+                                                        <div class="form-group col-md-3">
+                                                            <label for=""> شماره سریال کارت</label>
+                                                            <input asp-for="AccCardSerial" type="text" class="form-control" placeholder="شماره سریال کارت" disabled>
+                                                            <span asp-validation-for="AccCardSerial" class="error"></span>
+                                                        </div>
+
+
+                                                <div class="form-group col-md-3">
+                                                    <label for=""> استان </label>
+                                                    <select asp-for="SateUid" asp-items="@(new SelectList(Model.States,"Value","Text"))" id="state" type="text" class="form-control">
+                                                        <option value="@null">--انتخاب کنید--</option>
+                                                    </select>
+                                                    <span asp-validation-for="CityUid" class="error"></span>
+                                                </div>
+
+                                                <div class="form-group col-md-3">
+                                                    <label for=""> شهر </label>
+                                                    <select asp-for="CityUid" id="cities" asp-items="@(new SelectList(Model.Cities,"Value","Text"))" type="text" class="form-control">
+                                                        <option value="@null">--انتخاب کنید--</option>
+                                                    </select>
+                                                    <span asp-validation-for="CityUid" class="error"></span>
+                                                </div>
+                                                    </div>
+                                            <div class="form-row mb-8">
+
+                                                <div class="form-group col-md-12">
+                                                    <label for="">آدرس 1</label>
+                                                    <textarea asp-for="AccClbAddress" type="text" rows="3" class="form-control" placeholder="آدرس 1"></textarea>
+                                                    <span asp-validation-for="AccClbAddress" class="error"></span>
+                                                </div>
+                                                @* <div class="form-group col-md-3">
+                                                <label for="">آدرس 2</label>
+                                                <input asp-for="AccClbAddress2" type="text" class="form-control" placeholder="آدرس 2">
+                                                <span asp-validation-for="AccClbAddress2" class="error"></span>
+                                                </div>*@
+
+
+                                            </div>
+                                            <div class="form-row mb-8">
+                                                <div class="form-group col-md-12">
+                                                    <label for=""> توضیحات </label>
+                                                    <textarea asp-for="AccClbDescribtion" type="text" class="form-control" rows="3" placeholder=" توضیحات "></textarea>
+                                                    <span asp-for="AccClbDescribtion" class="error"></span>
+                                                </div>
+
+                                            </div>
+
+                                            <p><strong class="text-info">موقعیت جغرافیایی</strong></p>
                                                     <div class="form-row mb-8">
 
                                                         <div class="form-group col-md-3">
@@ -183,19 +207,11 @@
                                                             <input asp-for="AccClbLat" type="number" class="form-control" placeholder="عرض">
                                                             <span asp-validation-for="AccClbLat" class="error"></span>
                                                         </div>
+                                               
                                                     </div>
 
-
-
-                                                
-                                                    <div class="form-row mb-8">
-                                                        <div class="form-group col-md-12">
-                                                            <label for=""> توضیحات </label>
-                                                            <textarea asp-for="AccClbDescribtion" type="text" class="form-control" rows="3" placeholder=" توضیحات "></textarea>
-                                                            <span asp-for="AccClbDescribtion" class="error"></span>
-                                                        </div>
-
-                                                    </div>
+                                            
+                                            
                                                 </div>
 
                                             </div>
