--- a/ServiceComplex/Pages/Products/Category.cshtml
+++ b/ServiceComplex/Pages/Products/Category.cshtml
@@ -26,7 +26,7 @@
             <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
                 <div class="widget-content widget-content-area br-6">
                     <div class="text-center">
-                        <button onclick="addModal()" class="btn btn-success ">افزودن گروه جدید</button>
+                        <button onclick="addModal()"  class="btn btn-secondary btn-rounded btn-sm">افزودن گروه جدید</button>
                     </div>
                     <div class="table-responsive mb-4 mt-4">
                         <table id="dataTable" class="table table-hover table-bordered cell-border row-border" style="width:100%">
