--- a/ServiceComplex/Pages/BaseData/AccountRating.cshtml
+++ b/ServiceComplex/Pages/BaseData/AccountRating.cshtml
@@ -19,7 +19,7 @@
             <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
                 <div class="widget-content widget-content-area br-6">
                     <div class="text-center">
-                        <button onclick="Add()" class="btn btn-success btn-rounded btn-sm ">افزودن رکورد جدید</button>
+                        <button onclick="Add()" class="btn btn-secondary btn-rounded btn-sm">افزودن رکورد جدید</button>
                     </div>
                     <div class="table-responsive mb-4 mt-4">
                         <table id="dataTable_1" class="table table-hover table-bordered cell-border row-border" style="width:100%">
