--- a/ServiceComplex/Pages/BaseData/Partial/_CreateAccountClub.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_CreateAccountClub.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Application.BaseData.Dto.CreateAccountClub
 @inject Application.BaseData.IBaseDataService _service;
-@{
-    ViewData["Title"] = "ایجاد مشترک";
-    Layout = null;
-}
+
 
 <link href="~/assets/css/persian-datepicker.css" rel="stylesheet" />
-
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
 
-
+<div class="page-header">
+    <div class="page-title">
+        <h3>افزودن مشترک جدید</h3>
+    </div>
+</div>
 <div class="row">
     <div id="tabsAlignments" class="col-lg-12 col-12 layout-spacing">
         <div class="widget-content widget-content-area justify-tab">
@@ -44,7 +44,7 @@
                                                     <span asp-validation-for="@Model.ShamsiBirthDay" class="error"></span>
                                                 </div>
                                                 <div class="form-group col-md-3">
-                                                    <label for=""> موبایل </label>
+                                                    <label for=""> موبایل <span class="error">*</span></label>
                                                     <input asp-for="@Model.AccClbMobile" type="number" class="form-control" placeholder="موبایل">
                                                     <span asp-validation-for="@Model.AccClbMobile" class="error"></span>
                                                 </div>
@@ -70,11 +70,13 @@
                                                     <input asp-for="@Model.AccClbPhone1" type="number" class="form-control" placeholder="تلفن 1">
                                                     <span asp-validation-for="@Model.AccClbPhone1" class="error"></span>
                                                 </div>
-                                                <div class="form-group col-md-3">
-                                                    <label for="">تلفن 2</label>
-                                                    <input asp-for="@Model.AccClbPhone2" type="number" class="form-control" placeholder="تلفن 2">
-                                                    <span asp-validation-for="@Model.AccClbPhone2" class="error"></span>
-                                                </div>
+                                                 <div class="form-group col-md-3">
+                                                            <label for=""> شغل </label>
+                                                    <select asp-for="AccFrJob" asp-items="@(new SelectList(_service.SelectOptionJob(),"Value","Text"))" type="text" class="form-control">
+                                                                <option value="@null">--انتخاب کنید--</option>
+                                                            </select>
+                                                            <span asp-validation-for="AccFrJob" class="error"></span>
+                                                        </div>
                                             </div>
 
                                             <div class="form-row mb-8">
@@ -101,7 +103,7 @@
                                                 </div>
 
                                                 <div class="form-group col-md-3">
-                                                    <label for=""> جنسیت </label>
+                                                    <label for=""> جنسیت <span class="error">*</span></label>
                                                     <select asp-for="@Model.AccClbSex" type="text" class="form-control">
                                                         <option>--انتخاب کنید--</option>
                                                         <option value="1">زن</option>
@@ -117,7 +119,7 @@
                                             <div class="form-row mb-8">
                                                 <div class="form-group col-md-3">
                                                     <label for=""> استان </label>
-                                                    <select asp-for="@Model.SateUid" asp-items="@(new SelectList(_service.SelectOptionState(),"Id","Name"))" id="state" type="text" class="form-control">
+                                                    <select asp-for="@Model.SateUid" asp-items="@(new SelectList(_service.SelectOptionState(),"Value","Text"))" id="state" type="text" class="form-control">
                                                         <option>--انتخاب کنید--</option>
                                                     </select>
                                                     <span asp-validation-for="@Model.CityUid" class="error"></span>
@@ -184,7 +186,7 @@
                                                 <div class="form-group col-md-12">
                                                     <label for=""> توضیحات </label>
                                                     <textarea asp-for="@Model.AccClbDescribtion" type="text" class="form-control" rows="3" placeholder=" توضیحات "></textarea>
-                                                    <span asp-for="@Model.AccClbDescribtion" class="error"></span>
+                                                    <span asp-validation-for="@Model.AccClbDescribtion" class="error"></span>
                                                 </div>
 
                                             </div>
@@ -194,7 +196,7 @@
 
                                 </div>
                             </div>
-                            <button id="addSubmit" onclick="addSubmit()" style="margin-right:90%" type="button" class="btn btn-info btn-sm btn-rounded pull-left">تایید فرم</button>
+                            <button id="addSubmit" onclick="submitAdd()" style="margin-right:90%" type="button" class="btn btn-info btn-sm btn-rounded pull-left">تایید فرم</button>
 
                         </div>
                     </div>
