--- a/ServiceComplex/Pages/Shared/PartialView/_Menu.cshtml
+++ b/ServiceComplex/Pages/Shared/PartialView/_Menu.cshtml
@@ -183,7 +183,7 @@
             </a>
         </li>
                 <li>
-                    <a asp-page="/BaseData/AccountClupType">
+                    <a asp-page="/BaseData/AccountClubType">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
                         نوع اشتراک
                     </a>
@@ -214,7 +214,7 @@
             </a>
         </li>
         <li>
-            <a asp-page="/BaseData/Salon">
+            <a asp-page="/BaseData/Contract">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
                 قراردادها
             </a>
