--- a/ServiceComplex/Pages/Products/Edit.cshtml
+++ b/ServiceComplex/Pages/Products/Edit.cshtml
@@ -124,6 +124,23 @@
                            
                         </div>
 
+                            <div class="form-row mb-8">
+                            <div class="form-group col-md-6" >
+                                <div class="n-chk mt-40">
+                                    <label class="new-control new-checkbox checkbox-primary Current-color">
+                                        <input id="PrdHasPersonel"  asp-for="Command.PrdHasPersonel" type="checkbox" class="Current-color new-control-input product-timing">
+                                        <span class="new-control-indicator"></span>دارای پرسنل مرتبط و برنامه ریزی می باشد
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-6"  >
+                                <div class="n-chk mt-40">
+                                    <label class="new-control new-checkbox checkbox-primary Current-color">
+                                        <input id="PrdIsContonuouse"  asp-for="Command.PrdIsContonuouse" type="checkbox" class="Current-color new-control-input product-timing">
+                                        <span class="new-control-indicator"></span>خدمت مستمر و دارای برنامه ریزی می باشد
+                                    </label>
+                                </div>
+                            </div>
 
                         <div class="form-row mb-8">
                             <div class="form-group col-md-12">
@@ -159,7 +176,7 @@
 
     </div>
 
-
+    </div>
 <div class="tab-pane fade" id="justify-profile" role="tabpanel" aria-labelledby="justify-profile-tab">
     <div class="row layout-top-spacing" id="cancel-row">
         <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
