--- a/ServiceComplex/Pages/Shared/_Layout.cshtml
+++ b/ServiceComplex/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
     <link href="~/plugins/sweetalerts/sweetalert2.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/plugins/sweetalerts/sweetalert.css" rel="stylesheet" type="text/css"/>
     <link href="~/assets/css/components/custom-sweetalert.css" rel="stylesheet" type="text/css"/>
+    <link href="~/assets/css/persian-datepicker.css" rel="stylesheet" />
+
 
 </head>
 <body class="sidebar-noneoverflow dashboard-sales">
@@ -378,9 +380,12 @@
 
 <script src="~/plugins/sweetalerts/sweetalert2.min.js"></script>
 <script src="~/plugins/sweetalerts/custom-sweetalert.js"></script>
-
+    <script src="~/assets/js/datepicker/persian-date.min.js"></script>
+    <script src="~/assets/js/datepicker/persian-datepicker.min.js"></script>
 
 @await RenderSectionAsync("Scripts", false);
+
+
 <script>
 
         // A $( document ).ready() block.
