--- a/ServiceComplex/Pages/BaseData/Contract.cshtml
+++ b/ServiceComplex/Pages/BaseData/Contract.cshtml
@@ -19,46 +19,8 @@
         color: darkslategrey;
     }
 </style>
-<div id="content" class="main-content">
-    <div class="layout-px-spacing">
-
-        <div class="page-header">
-            <div class="page-title">
-                <h3>قرارداد ها</h3>
-            </div>
-        </div>
-
-        <div class="row layout-top-spacing" id="cancel-row">
-
-            <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-                <div class="widget-content widget-content-area br-6">
-                    <div class="text-center">
-                        <a onclick="Create()" class="btn btn-secondary btn-rounded btn-sm">افزودن قرارداد جدید</a>
-                    </div>
-                    <div class="table-responsive mb-4 mt-4">
-                        <table id="dataTable_1" class="table table-hover table-bordered cell-border row-border" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>عنوان</th>
-                                    <th>شماره </th>
-                                    <th>نوع</th>
-                                    <th>تاریخ شروع</th>
-                                    <th>تاریخ پایان</th>
-                                    <th>تاریخ ثبت</th>
-                                    <th>عملیات</th>
-
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
+<div id="content" class="main-content ">
+    <partial name="BaseData/Partial/_Contract" />
 </div>
 
 <div class="modal fade" id="createContract" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
