--- a/ServiceComplex/Pages/BaseData/Partial/_DefineContractRate.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_DefineContractRate.cshtml
@@ -1,19 +1,17 @@
 ﻿
-@model Application.BaseData.Dto.ContractDto
+@model Application.BaseData.Dto.ContractVM
 @inject Application.Product.Category.IProductCategory _service
 @{
 
 }
-<div id="content" class="main-content">
-    <div class="layout-px-spacing">
-
+<div class="layout-px-spacing">
         <div class="page-header">
-            <div class="page-title">
+            <div class="page-title layout-top-spacing">
                 <h3>نرخ قرارداد ها</h3>
             </div>
         </div>
 
-        <div class="row layout-top-spacing" id="cancel-row">
+<div class="row  layout-top-spacing" id="cancel-row">
 
             <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
                 
@@ -40,21 +38,32 @@
                                 </div>
                                 break;
                         }
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
+                    <div class="form-group col-md-7">
                                 <label>اعمال برای</label>
-                                <select id="CntType_create" name="CntType" asp-items="@(new SelectListItem(_service.CategorySelectOption(),"Value","Text",new SelectListGroup{}))" class="form-control" required>
+                            <select id="CntType_create" name="CntType" asp-items="_service.CategorySelectOption()" class="form-control" required>
                                     <option value="0" default="" selected="">انتخاب همه</option>
+                            </select>
+                    </div>
+                           
+                    <div class="form-group col-md-1 ">
+                     <label></label>
+                    <button onclick="AddProducts()" type="button" class="form-control btn btn-success" >+</button>
+                    </div>
 
-                                </select>
-                            </div>
 
-                        </div>
+
+                    </div>
+                    <div class="form-row">
+                    <ul class="list-group" id="Products">
+                        @for(int i = 0; i < Model.contractDetails.Count; i++)
+                        {
+                            <li class="list-group-item">@Model.contractDetails[i].CdFrContractNavigation.CntTitle</li>
+                        }
+                    </ul>
+                    </div>
                     </div>
                 </div>
             </div>
 
         </div>
-
-    </div>
 </div>
